web_static/styles/5-filters.css
.filters {
	display: flex;
	align-items: center;
	background-color: white;
	height: 70px;
	width: 100%;
	border: 1px solid #DDDDDD;
	border-radius: 4px;
}

.filters div {
	display: flex;
	height: 100%;
	width: 25%;
	margin: 0;
	justify-content: center;
	align-items: left;
	flex-direction: column;
}

.filters div:first-child {
	border-right: 1px solid #DDDDDD;
}


.filters div h3{
	font-weight: 600;
	margin: 0;
	padding-left: 40px;
}

.filters div h4 {
	font-weight: 400;
	font-size: 14px;
	margin: 0;
	padding-left: 40px;
}

.filters button {
	font-size: 18px;
	background-color: #FF5A5F;
	color: #FFFFFF;
	height: 48px;
	width: 20%;
	border: none;
	border-radius: 4px;
	margin-right: 30px;
}

.filters button:hover {
	opacity: 90%;
}

